--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation files('libs\\mysql-connector-java-5.1.48-bin.jar')
     implementation 'com.google.android.material:material:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
 }
