--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         android:theme="@style/AppTheme">
         <service android:name="my.bandit.Service.MusicService"></service>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_login">
+            android:name=".ui.login.LoginActivity"
+            android:label="Bandit">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"
+            android:label="Bandit"/>
 
     </application>
 
