--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
         <service android:name="my.bandit.Service.MusicService"></service>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.Login.LoginActivity"
             android:label="Bandit">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
