Design Login activity theme to greenish/black. Design home model to black/white.
TODO:
Fix themes and have better understanding.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,23 +7,27 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <service android:name="my.bandit.Service.MusicService"></service>
+
         <activity
             android:name=".Login.LoginActivity"
-            android:label="Bandit">
+            android:label="Bandit"
+            android:theme="@style/AppTheme.FullScreen.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MainActivity" />
+        <activity
+            android:name=".Activities.MainActivity"
+            android:theme="@style/MainTheme" />
 
     </application>
 
