--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.devbrackets.android:exomedia:4.3.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     apply plugin: "androidx.navigation.safeargs"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
